y.output
   0  $accept : file $end

   1  file :
   2       | file error ';'
   3       | file public tipo ID ';'
   4       | file public CONST tipo ID ';'
   5       | file public tipo ID init
   6       | file public CONST tipo ID init

   7  $$1 :

   8  file : file public tipo ID $$1 finit

   9  $$2 :

  10  file : file public VOID ID $$2 finit

  11  public :
  12         | PUBLIC

  13  tipo : INTEGER
  14       | STRING
  15       | NUMBER
  16       | INTEGER '*'
  17       | STRING '*'
  18       | NUMBER '*'

  19  init : ATR ID ';'
  20       | ATR INT ';'
  21       | ATR '-' INT ';'
  22       | ATR STR ';'
  23       | ATR CONST STR ';'
  24       | ATR REAL ';'
  25       | ATR '-' REAL ';'

  26  finit : '(' params ')' blocop
  27        | '(' ')' blocop

  28  blocop : ';'
  29         | bloco ';'

  30  params : param
  31         | params ',' param

  32  $$3 :

  33  bloco : '{' $$3 decls list end '}'

  34  decls :
  35        | decls param ';'

  36  param : tipo ID

  37  stmt : base
  38       | brk

  39  base : ';'

  40  $$4 :

  41  base : DO $$4 stmt WHILE expr ';'

  42  $$5 :

  43  base : FOR lv IN expr UPTO expr step DO $$5 stmt

  44  $$6 :

  45  base : FOR lv IN expr DOWNTO expr step DO $$6 stmt
  46       | IF expr THEN stmt
  47       | IF expr THEN stmt ELSE stmt
  48       | expr ';'
  49       | bloco
  50       | lv '#' expr ';'
  51       | error ';'

  52  end :
  53      | brk

  54  brk : BREAK intp ';'
  55      | CONTINUE intp ';'

  56  step :
  57       | STEP expr

  58  intp :
  59       | INT

  60  list : base
  61       | list base

  62  args : expr
  63       | args ',' expr

  64  lv : ID
  65     | ID '[' expr ']'

  66  expr : lv
  67       | '*' lv
  68       | lv ATR expr
  69       | INT
  70       | STR
  71       | REAL
  72       | '-' expr
  73       | '~' expr
  74       | '&' lv
  75       | expr '!'
  76       | INCR lv
  77       | DECR lv
  78       | lv INCR
  79       | lv DECR
  80       | expr '+' expr
  81       | expr '-' expr
  82       | expr '*' expr
  83       | expr '/' expr
  84       | expr '%' expr
  85       | expr '<' expr
  86       | expr '>' expr
  87       | expr GE expr
  88       | expr LE expr
  89       | expr NE expr
  90       | expr '=' expr
  91       | expr '&' expr
  92       | expr '|' expr
  93       | '(' expr ')'
  94       | ID '(' args ')'
  95       | ID '(' ')'

state 0
	$accept : . file $end  (0)
	file : .  (1)

	.  reduce 1

	file  goto 1


state 1
	$accept : file . $end  (0)
	file : file . error ';'  (2)
	file : file . public tipo ID ';'  (3)
	file : file . public CONST tipo ID ';'  (4)
	file : file . public tipo ID init  (5)
	file : file . public CONST tipo ID init  (6)
	file : file . public tipo ID $$1 finit  (8)
	file : file . public VOID ID $$2 finit  (10)
	public : .  (11)

	$end  accept
	error  shift 2
	PUBLIC  shift 3
	VOID  reduce 11
	INTEGER  reduce 11
	STRING  reduce 11
	NUMBER  reduce 11
	CONST  reduce 11

	public  goto 4


state 2
	file : file error . ';'  (2)

	';'  shift 5
	.  error


state 3
	public : PUBLIC .  (12)

	.  reduce 12


state 4
	file : file public . tipo ID ';'  (3)
	file : file public . CONST tipo ID ';'  (4)
	file : file public . tipo ID init  (5)
	file : file public . CONST tipo ID init  (6)
	file : file public . tipo ID $$1 finit  (8)
	file : file public . VOID ID $$2 finit  (10)

	VOID  shift 6
	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	CONST  shift 10
	.  error

	tipo  goto 11


state 5
	file : file error ';' .  (2)

	.  reduce 2


state 6
	file : file public VOID . ID $$2 finit  (10)

	ID  shift 12
	.  error


state 7
	tipo : INTEGER .  (13)
	tipo : INTEGER . '*'  (16)

	'*'  shift 13
	ID  reduce 13


state 8
	tipo : STRING .  (14)
	tipo : STRING . '*'  (17)

	'*'  shift 14
	ID  reduce 14


state 9
	tipo : NUMBER .  (15)
	tipo : NUMBER . '*'  (18)

	'*'  shift 15
	ID  reduce 15


state 10
	file : file public CONST . tipo ID ';'  (4)
	file : file public CONST . tipo ID init  (6)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	.  error

	tipo  goto 16


state 11
	file : file public tipo . ID ';'  (3)
	file : file public tipo . ID init  (5)
	file : file public tipo . ID $$1 finit  (8)

	ID  shift 17
	.  error


state 12
	file : file public VOID ID . $$2 finit  (10)
	$$2 : .  (9)

	.  reduce 9

	$$2  goto 18


state 13
	tipo : INTEGER '*' .  (16)

	.  reduce 16


state 14
	tipo : STRING '*' .  (17)

	.  reduce 17


state 15
	tipo : NUMBER '*' .  (18)

	.  reduce 18


state 16
	file : file public CONST tipo . ID ';'  (4)
	file : file public CONST tipo . ID init  (6)

	ID  shift 19
	.  error


state 17
	file : file public tipo ID . ';'  (3)
	file : file public tipo ID . init  (5)
	file : file public tipo ID . $$1 finit  (8)
	$$1 : .  (7)

	ATR  shift 20
	';'  shift 21
	'('  reduce 7

	init  goto 22
	$$1  goto 23


state 18
	file : file public VOID ID $$2 . finit  (10)

	'('  shift 24
	.  error

	finit  goto 25


state 19
	file : file public CONST tipo ID . ';'  (4)
	file : file public CONST tipo ID . init  (6)

	ATR  shift 20
	';'  shift 26
	.  error

	init  goto 27


state 20
	init : ATR . ID ';'  (19)
	init : ATR . INT ';'  (20)
	init : ATR . '-' INT ';'  (21)
	init : ATR . STR ';'  (22)
	init : ATR . CONST STR ';'  (23)
	init : ATR . REAL ';'  (24)
	init : ATR . '-' REAL ';'  (25)

	INT  shift 28
	REAL  shift 29
	ID  shift 30
	STR  shift 31
	CONST  shift 32
	'-'  shift 33
	.  error


state 21
	file : file public tipo ID ';' .  (3)

	.  reduce 3


state 22
	file : file public tipo ID init .  (5)

	.  reduce 5


state 23
	file : file public tipo ID $$1 . finit  (8)

	'('  shift 24
	.  error

	finit  goto 34


state 24
	finit : '(' . params ')' blocop  (26)
	finit : '(' . ')' blocop  (27)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	')'  shift 35
	.  error

	tipo  goto 36
	params  goto 37
	param  goto 38


state 25
	file : file public VOID ID $$2 finit .  (10)

	.  reduce 10


state 26
	file : file public CONST tipo ID ';' .  (4)

	.  reduce 4


state 27
	file : file public CONST tipo ID init .  (6)

	.  reduce 6


state 28
	init : ATR INT . ';'  (20)

	';'  shift 39
	.  error


state 29
	init : ATR REAL . ';'  (24)

	';'  shift 40
	.  error


state 30
	init : ATR ID . ';'  (19)

	';'  shift 41
	.  error


state 31
	init : ATR STR . ';'  (22)

	';'  shift 42
	.  error


state 32
	init : ATR CONST . STR ';'  (23)

	STR  shift 43
	.  error


state 33
	init : ATR '-' . INT ';'  (21)
	init : ATR '-' . REAL ';'  (25)

	INT  shift 44
	REAL  shift 45
	.  error


state 34
	file : file public tipo ID $$1 finit .  (8)

	.  reduce 8


state 35
	finit : '(' ')' . blocop  (27)

	';'  shift 46
	'{'  shift 47
	.  error

	blocop  goto 48
	bloco  goto 49


state 36
	param : tipo . ID  (36)

	ID  shift 50
	.  error


state 37
	finit : '(' params . ')' blocop  (26)
	params : params . ',' param  (31)

	')'  shift 51
	','  shift 52
	.  error


state 38
	params : param .  (30)

	.  reduce 30


state 39
	init : ATR INT ';' .  (20)

	.  reduce 20


state 40
	init : ATR REAL ';' .  (24)

	.  reduce 24


state 41
	init : ATR ID ';' .  (19)

	.  reduce 19


state 42
	init : ATR STR ';' .  (22)

	.  reduce 22


state 43
	init : ATR CONST STR . ';'  (23)

	';'  shift 53
	.  error


state 44
	init : ATR '-' INT . ';'  (21)

	';'  shift 54
	.  error


state 45
	init : ATR '-' REAL . ';'  (25)

	';'  shift 55
	.  error


state 46
	blocop : ';' .  (28)

	.  reduce 28


state 47
	bloco : '{' . $$3 decls list end '}'  (33)
	$$3 : .  (32)

	.  reduce 32

	$$3  goto 56


state 48
	finit : '(' ')' blocop .  (27)

	.  reduce 27


state 49
	blocop : bloco . ';'  (29)

	';'  shift 57
	.  error


state 50
	param : tipo ID .  (36)

	.  reduce 36


state 51
	finit : '(' params ')' . blocop  (26)

	';'  shift 46
	'{'  shift 47
	.  error

	blocop  goto 58
	bloco  goto 49


state 52
	params : params ',' . param  (31)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	.  error

	tipo  goto 36
	param  goto 59


state 53
	init : ATR CONST STR ';' .  (23)

	.  reduce 23


state 54
	init : ATR '-' INT ';' .  (21)

	.  reduce 21


state 55
	init : ATR '-' REAL ';' .  (25)

	.  reduce 25


state 56
	bloco : '{' $$3 . decls list end '}'  (33)
	decls : .  (34)

	.  reduce 34

	decls  goto 60


state 57
	blocop : bloco ';' .  (29)

	.  reduce 29


state 58
	finit : '(' params ')' blocop .  (26)

	.  reduce 26


state 59
	params : params ',' param .  (31)

	.  reduce 31


state 60
	bloco : '{' $$3 decls . list end '}'  (33)
	decls : decls . param ';'  (35)

	error  shift 61
	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	DO  shift 66
	IF  shift 67
	FOR  shift 68
	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	';'  shift 76
	'{'  shift 47
	.  error

	tipo  goto 36
	bloco  goto 77
	param  goto 78
	base  goto 79
	list  goto 80
	lv  goto 81
	expr  goto 82


state 61
	base : error . ';'  (51)

	';'  shift 83
	.  error


state 62
	expr : INT .  (69)

	.  reduce 69


state 63
	expr : REAL .  (71)

	.  reduce 71


state 64
	lv : ID .  (64)
	lv : ID . '[' expr ']'  (65)
	expr : ID . '(' args ')'  (94)
	expr : ID . '(' ')'  (95)

	'['  shift 84
	'('  shift 85
	DO  reduce 64
	THEN  reduce 64
	UPTO  reduce 64
	DOWNTO  reduce 64
	STEP  reduce 64
	INCR  reduce 64
	DECR  reduce 64
	ATR  reduce 64
	'|'  reduce 64
	'&'  reduce 64
	'='  reduce 64
	NE  reduce 64
	GE  reduce 64
	LE  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	'!'  reduce 64
	';'  reduce 64
	')'  reduce 64
	','  reduce 64
	'#'  reduce 64
	']'  reduce 64


state 65
	expr : STR .  (70)

	.  reduce 70


state 66
	base : DO . $$4 stmt WHILE expr ';'  (41)
	$$4 : .  (40)

	.  reduce 40

	$$4  goto 86


state 67
	base : IF . expr THEN stmt  (46)
	base : IF . expr THEN stmt ELSE stmt  (47)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 88


state 68
	base : FOR . lv IN expr UPTO expr step DO $$5 stmt  (43)
	base : FOR . lv IN expr DOWNTO expr step DO $$6 stmt  (45)

	ID  shift 89
	.  error

	lv  goto 90


state 69
	expr : INCR . lv  (76)

	ID  shift 89
	.  error

	lv  goto 91


state 70
	expr : DECR . lv  (77)

	ID  shift 89
	.  error

	lv  goto 92


state 71
	expr : '&' . lv  (74)

	ID  shift 89
	.  error

	lv  goto 93


state 72
	expr : '~' . expr  (73)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 94


state 73
	expr : '-' . expr  (72)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 95


state 74
	expr : '*' . lv  (67)

	ID  shift 89
	.  error

	lv  goto 96


state 75
	expr : '(' . expr ')'  (93)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 97


state 76
	base : ';' .  (39)

	.  reduce 39


state 77
	base : bloco .  (49)

	.  reduce 49


state 78
	decls : decls param . ';'  (35)

	';'  shift 98
	.  error


state 79
	list : base .  (60)

	.  reduce 60


state 80
	bloco : '{' $$3 decls list . end '}'  (33)
	list : list . base  (61)
	end : .  (52)

	error  shift 61
	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	DO  shift 66
	IF  shift 67
	FOR  shift 68
	BREAK  shift 99
	CONTINUE  shift 100
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	';'  shift 76
	'{'  shift 47
	'}'  reduce 52

	bloco  goto 77
	base  goto 101
	end  goto 102
	brk  goto 103
	lv  goto 81
	expr  goto 82


state 81
	base : lv . '#' expr ';'  (50)
	expr : lv .  (66)
	expr : lv . ATR expr  (68)
	expr : lv . INCR  (78)
	expr : lv . DECR  (79)

	INCR  shift 104
	DECR  shift 105
	ATR  shift 106
	'#'  shift 107
	'|'  reduce 66
	'&'  reduce 66
	'='  reduce 66
	NE  reduce 66
	GE  reduce 66
	LE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'!'  reduce 66
	';'  reduce 66


state 82
	base : expr . ';'  (48)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	'|'  shift 108
	'&'  shift 109
	'='  shift 110
	NE  shift 111
	GE  shift 112
	LE  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'!'  shift 121
	';'  shift 122
	.  error


state 83
	base : error ';' .  (51)

	.  reduce 51


state 84
	lv : ID '[' . expr ']'  (65)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 123


state 85
	expr : ID '(' . args ')'  (94)
	expr : ID '(' . ')'  (95)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	')'  shift 124
	.  error

	args  goto 125
	lv  goto 87
	expr  goto 126


state 86
	base : DO $$4 . stmt WHILE expr ';'  (41)

	error  shift 61
	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	DO  shift 66
	IF  shift 67
	FOR  shift 68
	BREAK  shift 99
	CONTINUE  shift 100
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	';'  shift 76
	'{'  shift 47
	.  error

	bloco  goto 77
	base  goto 127
	stmt  goto 128
	brk  goto 129
	lv  goto 81
	expr  goto 82


state 87
	expr : lv .  (66)
	expr : lv . ATR expr  (68)
	expr : lv . INCR  (78)
	expr : lv . DECR  (79)

	INCR  shift 104
	DECR  shift 105
	ATR  shift 106
	DO  reduce 66
	THEN  reduce 66
	UPTO  reduce 66
	DOWNTO  reduce 66
	STEP  reduce 66
	'|'  reduce 66
	'&'  reduce 66
	'='  reduce 66
	NE  reduce 66
	GE  reduce 66
	LE  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'!'  reduce 66
	';'  reduce 66
	')'  reduce 66
	','  reduce 66
	']'  reduce 66


state 88
	base : IF expr . THEN stmt  (46)
	base : IF expr . THEN stmt ELSE stmt  (47)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	THEN  shift 130
	'|'  shift 108
	'&'  shift 109
	'='  shift 110
	NE  shift 111
	GE  shift 112
	LE  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'!'  shift 121
	.  error


state 89
	lv : ID .  (64)
	lv : ID . '[' expr ']'  (65)

	'['  shift 84
	DO  reduce 64
	THEN  reduce 64
	IN  reduce 64
	UPTO  reduce 64
	DOWNTO  reduce 64
	STEP  reduce 64
	'|'  reduce 64
	'&'  reduce 64
	'='  reduce 64
	NE  reduce 64
	GE  reduce 64
	LE  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'*'  reduce 64
	'/'  reduce 64
	'%'  reduce 64
	'!'  reduce 64
	';'  reduce 64
	')'  reduce 64
	','  reduce 64
	']'  reduce 64


state 90
	base : FOR lv . IN expr UPTO expr step DO $$5 stmt  (43)
	base : FOR lv . IN expr DOWNTO expr step DO $$6 stmt  (45)

	IN  shift 131
	.  error


state 91
	expr : INCR lv .  (76)

	.  reduce 76


state 92
	expr : DECR lv .  (77)

	.  reduce 77


state 93
	expr : '&' lv .  (74)

	.  reduce 74


state 94
	expr : '~' expr .  (73)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	.  reduce 73


state 95
	expr : '-' expr .  (72)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	.  reduce 72


state 96
	expr : '*' lv .  (67)

	.  reduce 67


state 97
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)
	expr : '(' expr . ')'  (93)

	'|'  shift 108
	'&'  shift 109
	'='  shift 110
	NE  shift 111
	GE  shift 112
	LE  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'!'  shift 121
	')'  shift 132
	.  error


state 98
	decls : decls param ';' .  (35)

	.  reduce 35


state 99
	brk : BREAK . intp ';'  (54)
	intp : .  (58)

	INT  shift 133
	';'  reduce 58

	intp  goto 134


state 100
	brk : CONTINUE . intp ';'  (55)
	intp : .  (58)

	INT  shift 133
	';'  reduce 58

	intp  goto 135


state 101
	list : list base .  (61)

	.  reduce 61


state 102
	bloco : '{' $$3 decls list end . '}'  (33)

	'}'  shift 136
	.  error


state 103
	end : brk .  (53)

	.  reduce 53


state 104
	expr : lv INCR .  (78)

	.  reduce 78


state 105
	expr : lv DECR .  (79)

	.  reduce 79


state 106
	expr : lv ATR . expr  (68)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 137


state 107
	base : lv '#' . expr ';'  (50)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 138


state 108
	expr : expr '|' . expr  (92)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 139


state 109
	expr : expr '&' . expr  (91)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 140


state 110
	expr : expr '=' . expr  (90)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 141


state 111
	expr : expr NE . expr  (89)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 142


state 112
	expr : expr GE . expr  (87)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 143


state 113
	expr : expr LE . expr  (88)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 144


state 114
	expr : expr '>' . expr  (86)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 145


state 115
	expr : expr '<' . expr  (85)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 146


state 116
	expr : expr '+' . expr  (80)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 147


state 117
	expr : expr '-' . expr  (81)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 148


state 118
	expr : expr '*' . expr  (82)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 149


state 119
	expr : expr '/' . expr  (83)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 150


state 120
	expr : expr '%' . expr  (84)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 151


state 121
	expr : expr '!' .  (75)

	.  reduce 75


state 122
	base : expr ';' .  (48)

	.  reduce 48


state 123
	lv : ID '[' expr . ']'  (65)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	'|'  shift 108
	'&'  shift 109
	'='  shift 110
	NE  shift 111
	GE  shift 112
	LE  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'!'  shift 121
	']'  shift 152
	.  error


state 124
	expr : ID '(' ')' .  (95)

	.  reduce 95


state 125
	args : args . ',' expr  (63)
	expr : ID '(' args . ')'  (94)

	')'  shift 153
	','  shift 154
	.  error


state 126
	args : expr .  (62)
	expr : expr . '!'  (75)
	expr : expr . '+' expr  (80)
	expr : expr . '-' expr  (81)
	expr : expr . '*' expr  (82)
	expr : expr . '/' expr  (83)
	expr : expr . '%' expr  (84)
	expr : expr . '<' expr  (85)
	expr : expr . '>' expr  (86)
	expr : expr . GE expr  (87)
	expr : expr . LE expr  (88)
	expr : expr . NE expr  (89)
	expr : expr . '=' expr  (90)
	expr : expr . '&' expr  (91)
	expr : expr . '|' expr  (92)

	'|'  shift 108
	'&'  shift 109
	'='  shift 110
	NE  shift 111
	GE  shift 112
	LE  shift 113
	'>'  shift 114
	'<'  shift 115
	'+'  shift 116
	'-'  shift 117
	'*'  shift 118
	'/'  shift 119
	'%'  shift 120
	'!'  shift 121
	')'  reduce 62
	','  reduce 62


state 127
	stmt : base .  (37)

	.  reduce 37


state 128
	base : DO $$4 stmt . WHILE expr ';'  (41)

	WHILE  shift 155
	.  error


state 129
	stmt : brk .  (38)

	.  reduce 38


state 130
	base : IF expr THEN . stmt  (46)
	base : IF expr THEN . stmt ELSE stmt  (47)

	error  shift 61
	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	DO  shift 66
	IF  shift 67
	FOR  shift 68
	BREAK  shift 99
	CONTINUE  shift 100
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	';'  shift 76
	'{'  shift 47
	.  error

	bloco  goto 77
	base  goto 127
	stmt  goto 156
	brk  goto 129
	lv  goto 81
	expr  goto 82


state 131
	base : FOR lv IN . expr UPTO expr step DO $$5 stmt  (43)
	base : FOR lv IN . expr DOWNTO expr step DO $$6 stmt  (45)

	INT  shift 62
	REAL  shift 63
	ID  shift 64
	STR  shift 65
	INCR  shift 69
	DECR  shift 70
	'&'  shift 71
	'~'  shift 72
	'-'  shift 73
	'*'  shift 74
	'('  shift 75
	.  error

	lv  goto 87
	expr  goto 157


state 132
	expr : '(' expr ')' .  (93)

	.  reduce 93


state 133
	intp : INT .  (59)

	.  reduce 59


state 134
	brk : BREAK intp . ';'  (54)

	';'  shift 158
	.  error


state 135
	brk : CONTINUE intp . ';'  (55)

	';'  shift 159
	.  error


state 136
	bloco : '{' $$3 decls list end '}' .  (33)

	.  reduce 33

